Edit Grid kategori

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-2 col-md-6 col-sm-6 offset-lg-1">
+          <div class="col-lg-2 col-md-6 col-xs-6 offset-lg-1">
             <a href="">
               <div class="card">
                 <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto" alt="">
@@ -51,7 +51,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
+          <div class="col-lg-2 col-md-6 col-xs-6">
             <a href="">
               <div class="card">
                 <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto" alt="">
@@ -61,7 +61,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
+          <div class="col-lg-2 col-md-6 col-xs-6">
             <a href="">
               <div class="card">
                 <img src="assets/img/kategori/Facial Wash.png" class="card-img-top d-block mx-auto" alt="">
@@ -71,7 +71,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
+          <div class="col-lg-2 col-md-6 col-xs-6">
             <a href="">
               <div class="card">
                 <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto" alt="">
@@ -81,7 +81,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
+          <div class="col-lg-2 col-md-6 col-xs-6">
             <a href="">
               <div class="card">
                 <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto" alt="">
