Update Navbar Brand

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="navbar-brand" href="#">SCARLETT WHITENING BEKASI</a>
+            <a class="navbar-brand" href="#">SCARLETT WHITENING BY FELICYA ( BEKASI )</a>
           </li>
         </ul>
         <a href="http://wa.me/6288211723419">
@@ -115,7 +115,23 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
+            <a href="">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -131,7 +147,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -147,7 +163,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -163,7 +179,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -179,7 +195,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -195,7 +211,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -211,7 +227,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -227,7 +243,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -243,7 +259,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -259,7 +275,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
@@ -275,23 +291,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
-            <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-3 .col-md-6 col-sm-12 mb-3">
+          <div class="col-lg-3 col-xs-6 mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
