update grid card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="navbar-brand" href="#">SCARLETT WHITENING BY FELICYA ( BEKASI )</a>
+            <a class="navbar-brand" href="#">SCARLETT WHITENING BEKASI</a>
           </li>
         </ul>
         <a href="http://wa.me/6288211723419">
@@ -40,52 +40,52 @@
             <h4 class="mt-3 mb-4 text-center">KATEGORI</h4>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-2 col-md-6 col-xs-6 offset-lg-1">
+        <div class="row row-cols-lg-5 row-cols-sm-3">
+          <div class="col">
             <a href="">
-              <div class="card">
-                <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-body">
+              <div class="card mb-3">
+                <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto img-fluid" alt="">
+                <div class="card-img-overlay">
                   <p class="card-title">Body Lotion</p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-xs-6">
+          <div class="col">
             <a href="">
-              <div class="card">
+              <div class="card mb-3">
                 <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-body">
+                <div class="card-img-overlay">
                   <p class="card-title">Body Scrub</p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-xs-6">
+          <div class="col">
             <a href="">
-              <div class="card">
+              <div class="card mb-3">
                 <img src="assets/img/kategori/Facial Wash.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-body">
+                <div class="card-img-overlay">
                   <p class="card-title">Facial Wash</p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-xs-6">
+          <div class="col">
             <a href="">
-              <div class="card">
+              <div class="card mb-3">
                 <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-body">
+                <div class="card-img-overlay">
                   <p class="card-title">Hair Treatment</p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-xs-6">
+          <div class="col">
             <a href="">
-              <div class="card">
+              <div class="card mb-3">
                 <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-body">
+                <div class="card-img-overlay">
                   <p class="card-title">Shower Scrub</p>
                 </div>
               </div>
