Fix grid kategori

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h4 class="mt-3 mb-4 text-center">KATEGORI</h4>
           </div>
         </div>
-        <div class="row row-cols-lg-5 row-cols-sm-3">
+        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
           <div class="col">
             <a href="">
               <div class="card mb-3">
