--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
-          <div class="col">
+          <div class="col mb-3">
             <a href="">
               <div class="card mb-3">
                 <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto img-fluid" alt="">
@@ -51,7 +51,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col mb-3">
             <a href="">
               <div class="card mb-3">
                 <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto" alt="">
@@ -61,7 +61,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col mb-3">
             <a href="">
               <div class="card mb-3">
                 <img src="assets/img/kategori/Facial Wash.png" class="card-img-top d-block mx-auto" alt="">
@@ -71,7 +71,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col mb-3">
             <a href="">
               <div class="card mb-3">
                 <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto" alt="">
@@ -81,7 +81,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col mb-3">
             <a href="">
               <div class="card mb-3">
                 <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto" alt="">
@@ -114,8 +114,8 @@
             <h4 class="mt-3 mb-4 text-center">PRODUK</h4>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-xs-6 mb-3">
+        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -131,13 +131,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -147,13 +147,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -163,13 +163,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -179,13 +179,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -195,13 +195,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -211,13 +211,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -227,13 +227,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -243,13 +243,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -259,13 +259,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -275,13 +275,13 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -291,13 +291,61 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-xs-6 mb-3">
+          <div class="col mb-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col mb-3">
+            <a href="">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col mb-3">
+            <a href="">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col mb-3">
+            <a href="">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
                   </div>
                   <div class="card-text d-flex">
                     <h5> Rp. 70.000</h5>
@@ -316,5 +364,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </body>
 </html>
