--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -131,7 +131,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -147,7 +147,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -163,7 +163,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -179,7 +179,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -195,7 +195,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -211,7 +211,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -227,7 +227,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -243,7 +243,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -259,7 +259,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -275,7 +275,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -291,7 +291,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -307,7 +307,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -323,7 +323,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -339,7 +339,7 @@
               </div>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
