--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
 
     <title>SCARLETT WHITENING BEKASI</title>
   </head>
@@ -358,6 +361,45 @@
         </div>
       </div>
     </section>
+
+    <footer class="container-fluid">
+      <div class="row text-center pt-5">
+        <div class="col-12">
+          <h5>PEMBAYARAN</h5>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/pembayaran/bank_bca.png" class="float-right">
+        </div>
+        <div class="col-2">
+          <img src="assets/img/pembayaran/bank_mandiri.png" class="float-left">
+        </div>
+      </div>
+      <div class="row text-center mt-3">
+        <div class="col-12">
+          <h5>IKUTI KAMI</h5>
+        </div>
+      </div>
+      <div class="row follow">
+        <div class="col-12 d-flex justify-content-center">
+          <a href="">
+            <p> <i class="fab fa-shopify"></i> Shopee</p>
+          </a>
+          <a href="" class="mx-3">
+            <p><i class="fab fa-whatsapp"></i> Whatsapp</p>
+          </a>
+          <a href="">
+            <p><i class="fab fa-instagram"></i> Instagram</p>
+          </a>
+        </div>
+      </div>
+      <div class="row text-center mt-5">
+        <div class="col-12">
+          <p class="text-muted">@Tooddler Clothes 2020. Hak Cipta Dilindungi</p>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
