--- a/index.html
+++ b/index.html
@@ -118,61 +118,35 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-2 col-md-6 col-6">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+            <p>Scarlett Whitening Body Lotion Charming</p>
+            <h5>Rp.70.000</h5>
+            <p class="text-muted">12 Terjual</p>
           </div>
-          <div class="col-lg-2 col-md-6 col-6">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+            <p>Scarlett Whitening Body Lotion Charming</p>
+            <h5>Rp.70.000</h5>
+            <p class="text-muted">12 Terjual</p>
           </div>
-          <div class="col-lg-2 col-md-6 col-6">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+            <p>Scarlett Whitening Body Lotion Charming</p>
+            <h5>Rp.70.000</h5>
+            <p class="text-muted">12 Terjual</p>
           </div>
-          <div class="col-lg-2 col-md-6 col-6">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+            <p>Scarlett Whitening Body Lotion Charming</p>
+            <h5>Rp.70.000</h5>
+            <p class="text-muted">12 Terjual</p>
+          </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+            <p>Scarlett Whitening Body Lotion Charming</p>
+            <h5>Rp.70.000</h5>
+            <p class="text-muted">12 Terjual</p>
           </div>
         </div>
       </div>
