--- a/index.html
+++ b/index.html
@@ -43,55 +43,29 @@
             <h4 class="mt-3 mb-4 text-center">KATEGORI</h4>
           </div>
         </div>
-        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
-          <div class="col mb-3">
+        <div class="row justify-content-center mb-5 p-2">
+          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
             <a href="">
-              <div class="card mb-3">
-                <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto img-fluid" alt="">
-                <div class="card-img-overlay">
-                  <p class="card-title">Body Lotion</p>
-                </div>
-              </div>
+              <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto img-fluid" alt="">
+              <p>Body Lotion</p>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
             <a href="">
-              <div class="card mb-3">
-                <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-img-overlay">
-                  <p class="card-title">Body Scrub</p>
-                </div>
-              </div>
+              <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto img-fluid" alt="">
+              <p>Body Scrub</p>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
             <a href="">
-              <div class="card mb-3">
-                <img src="assets/img/kategori/Facial Wash.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-img-overlay">
-                  <p class="card-title">Facial Wash</p>
-                </div>
-              </div>
+              <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto img-fluid" alt="">
+              <p>Shower Scrub</p>
             </a>
           </div>
-          <div class="col mb-3">
+          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
             <a href="">
-              <div class="card mb-3">
-                <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-img-overlay">
-                  <p class="card-title">Hair Treatment</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col mb-3">
-            <a href="">
-              <div class="card mb-3">
-                <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto" alt="">
-                <div class="card-img-overlay">
-                  <p class="card-title">Shower Scrub</p>
-                </div>
-              </div>
+              <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto img-fluid" alt="">
+              <p>Hair Treatment</p>
             </a>
           </div>
         </div>
